# BalanceSplit

./: .gitignore  README.md  pyproject.toml
balancesplit/: analysis.py  cli.py  clustering.py  data.py  splitter.py  tests.py
balancesplit/logs/: config.py
optisplit/: __init__.py  cli.py  data.py  splitter.py  test_data_split.csv  tests.py
optisplit/logs/: __init__.py
