[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "OptiSplit"
dynamic = ["version"]
description = "Constructing Balanced and Robust Splits for Molecular Dataset"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{name = "Sohvi Luukkonen", email = "sohvi.luukkonen@hotmail.com"},]
license = { file = "LICENSE" }
keywords = ["data split", "multi-task", "balanced data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
]

dependencies = [
    "parameterized",
    "matplotlib",
    "seaborn",
    "pandas",
    "scikit-learn",
    "rdkit",
    "numpy",
    "tqdm",
    "pulp",
    "optuna",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "optisplit/_version.py"

[entry_points]
console_scripts = [
    "optisplit = optisplit.cli:cli"
]