[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "BalanceSplit"
dynamic = ["version"]
description = "Constructing Balanced and Robust Splits for Molecular Dataset"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    {name = "Sohvi Luukkonen", email = "sohvi.luukkonen@hotmail.com"},
]
license = { file = "LICENSE" }
keywords = ["data split", "multi-task", "balanced data", "qsar"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "parameterized",
    "matplotlib",
    "seaborn",
    "pandas",
    "scikit-learn",
    "rdkit",
    "numpy",
    "tqdm",
    "pulp",
    "optuna",
]

[project.urls]
Homepage = "https://github.com/sohviluukkonen/BalanceSplit"
Issues = "https://github.com/sohviluukkonen/BalanceSplit/issues"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "balancesplit/_version.py"

# [entry_points]
# console_scripts = [
#     "balancesplit = balancesplit.cli:cli"
# ]
# [project.scripts]
# name = "balancesplit"
# path = "balancesplit:cli"
[project.scripts]
balancesplit = "balancesplit.cli:cli"